--- a/quiz/static/styles_home.css
+++ b/quiz/static/styles_home.css
@@ -13,7 +13,7 @@ body{
 	color: white;	
 }
 .content h1{
-	float: left;
+	position: relative;
 	text-align: center;
 	font-size: 40px;
 	color: white;
@@ -21,9 +21,10 @@ body{
 .btn{
 	position: relative;
 	width: 100%;
-	background-color: #ff781f;
+	background-color: white;
 	border: 2px solid white;
-	color: white;
+	border-radius: 12px;
+	color: #ff781f;
 	padding: 5px;
 	font-size: 50px;
 	cursor: pointer;
